@@ -255,6 +255,10 @@ class tx_agency_control_main {
 				$this->tca,
 				$this->langObj,
 				$this->controlData,
+				$this->controlData->getBackURL(),
+				$this->controlData->getExtKey(),
+				$this->controlData->getPrefixId(),
+				$this->controlData->getTable(),
 				$this->urlObj,
 				$staticInfoObj,
 				$uid,
